acc 98% main dataset || 86.03% dig-10K dataset

--- a/CapsNets_Kannada_MNIST.ipynb
+++ b/CapsNets_Kannada_MNIST.ipynb
@@ -23,14 +23,23 @@
       "provenance": [],
       "collapsed_sections": [
         "gGK25aIYYq3w",
-        "MNdWyen-Yq3y",
-        "CoF9Zq1aYq3-"
+        "MNdWyen-Yq3y"
       ],
-      "toc_visible": true
+      "include_colab_link": true
     },
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/QuickLearner171998/CapsNet/blob/master/CapsNets_Kannada_MNIST.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -79,30 +88,14 @@
       "metadata": {
         "id": "JZD4FBtkZkcF",
         "colab_type": "code",
-        "outputId": "e3b222b6-eb1e-42ad-b38e-b21da3c656b3",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 125
-        }
+        "colab": {}
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -126,79 +119,21 @@
         }
       },
       "source": [
-        "!ls\n",
-        "%cd drive\n"
+        "# !ls\n",
+        "# %cd drive\n",
+        "# %cd 'My Drive'\n",
+        "# %cd 'MY Projects'\n",
+        "# %cd 'EEE lop'\n",
+        "# %cd \"CapsNet for kannada_mnist\"\n",
+        "# !ls"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "drive  sample_data\n",
             "/content/drive\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "YP5uAWWBadlg",
-        "colab_type": "code",
-        "outputId": "0d2b5188-2be9-42b7-df2b-6e3289a6ab9e",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 194
-        }
-      },
-      "source": [
-        "% cd 'My Drive'\n",
-        "%cd 'MY Projects'\n",
-        "%cd 'EEE lop'\n",
-        "%cd \"CapsNet for kannada_mnist\"\n",
-        "!ls"
-      ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/content/drive/My Drive\n",
-            "/content/drive/My Drive/MY Projects\n",
-            "/content/drive/My Drive/MY Projects/EEE lop\n",
-            "/content/drive/My Drive/MY Projects/EEE lop/CapsNet for kannada_mnist\n",
-            " CapsNets_Kannada_MNIST.ipynb   kaggle.json\n",
-            "'checkpoint (1)'\t        Kannada_MNIST_datataset_paper\n",
-            " ckpts\t\t\t        logs\n",
-            " dig_ckpt.data-00000-of-00001   my_capsule_network.data-00000-of-00001\n",
-            " dig_ckpt.index\t\t        my_capsule_network.index\n",
-            " dig_ckpt.meta\t\t        my_capsule_network.meta\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9FTKWM3HraH7",
-        "colab_type": "code",
-        "outputId": "387b7e6e-db25-4506-96d3-943a7eeb4968",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "%cd CapsNet\\ for\\ kannada_mnist"
-      ],
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/content/drive/My Drive/MY Projects/EEE lop/CapsNet for kannada_mnist\n"
           ],
           "name": "stdout"
         }
@@ -301,7 +236,7 @@
       "source": [
         "X_test.shape"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -383,7 +318,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -563,7 +498,7 @@
         "conv1 = tf.layers.conv2d(X, name=\"conv1\", **conv1_params)\n",
         "conv2 = tf.layers.conv2d(conv1, name=\"conv2\", **conv2_params)"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -930,7 +865,7 @@
       "source": [
         "W_tiled"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -970,7 +905,7 @@
       "source": [
         "caps1_output_tiled"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1034,7 +969,7 @@
       "source": [
         "caps2_predicted"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1108,7 +1043,7 @@
       "source": [
         "raw_weights"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1169,7 +1104,7 @@
         "routing_weights = tf.nn.softmax(raw_weights, axis=2, name=\"routing_weights\")\n",
         "routing_weights"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1213,7 +1148,7 @@
         "                             name=\"weighted_sum\")\n",
         "weighted_sum"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1281,7 +1216,7 @@
       "source": [
         "caps2_output_round_1"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1361,7 +1296,7 @@
       "source": [
         "caps2_predicted"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1401,7 +1336,7 @@
       "source": [
         "caps2_output_round_1"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1525,7 +1460,7 @@
         "                              axis=-2,\n",
         "                              name=\"caps2_output_round_2\")"
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1578,7 +1513,7 @@
       "source": [
         "caps2_output"
       ],
-      "execution_count": 47,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1704,7 +1639,7 @@
         "y_proba = safe_norm(caps2_output, axis=-2, name=\"y_proba\")\n",
         "y_proba"
       ],
-      "execution_count": 49,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1745,7 +1680,7 @@
         "y_proba_argmax = tf.argmax(y_proba, axis=2, name=\"y_proba\")\n",
         "y_proba_argmax"
       ],
-      "execution_count": 50,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1808,7 +1743,7 @@
       "source": [
         "y_pred"
       ],
-      "execution_count": 52,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1955,7 +1890,7 @@
       "source": [
         "caps2_output"
       ],
-      "execution_count": 56,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2245,7 +2180,7 @@
       "source": [
         "reconstruction_mask"
       ],
-      "execution_count": 65,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2285,7 +2220,7 @@
       "source": [
         "caps2_output"
       ],
-      "execution_count": 66,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2365,7 +2300,7 @@
       "source": [
         "caps2_output_masked"
       ],
-      "execution_count": 69,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2430,7 +2365,7 @@
       "source": [
         "decoder_input"
       ],
-      "execution_count": 71,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2504,7 +2439,7 @@
         "                                     activation=tf.nn.sigmoid,\n",
         "                                     name=\"decoder_output\")"
       ],
-      "execution_count": 73,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2537,7 +2472,7 @@
       "source": [
         "decoder_output"
       ],
-      "execution_count": 74,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2683,7 +2618,7 @@
       "source": [
         "accuracy"
       ],
-      "execution_count": 78,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2734,7 +2669,7 @@
         "optimizer = tf.train.AdamOptimizer()\n",
         "training_op = optimizer.minimize(loss, name=\"training_op\")"
       ],
-      "execution_count": 79,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3026,7 +2961,7 @@
         "    print(\"\\rFinal test accuracy: {:.4f}%  Loss: {:.6f}\".format(\n",
         "        acc_test * 100, loss_test))"
       ],
-      "execution_count": 110,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3063,11 +2998,11 @@
       "metadata": {
         "id": "O89Iku1zYq31",
         "colab_type": "code",
+        "outputId": "5dd0d898-f817-41ac-dae9-7b2d583a1c80",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "5dd0d898-f817-41ac-dae9-7b2d583a1c80"
+        }
       },
       "source": [
         "n_samples = 5\n",
@@ -3081,7 +3016,7 @@
         "            feed_dict={X: sample_images,\n",
         "                       y: np.array([], dtype=np.int64)})"
       ],
-      "execution_count": 89,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3125,7 +3060,7 @@
         "    \n",
         "plt.show()\n"
       ],
-      "execution_count": 90,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3188,16 +3123,16 @@
       "metadata": {
         "id": "d5n4SFQrYq4A",
         "colab_type": "code",
+        "outputId": "36b8e583-a97e-4e86-f113-d7d4927890fe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "36b8e583-a97e-4e86-f113-d7d4927890fe"
+        }
       },
       "source": [
         "caps2_output_value.shape"
       ],
-      "execution_count": 91,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3284,11 +3219,11 @@
       "metadata": {
         "id": "BdXJgB_CYq4G",
         "colab_type": "code",
+        "outputId": "6ae6f3d0-3707-4041-85a5-2d37a7acc460",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "6ae6f3d0-3707-4041-85a5-2d37a7acc460"
+        }
       },
       "source": [
         "tweak_labels = np.tile(y_test[:n_samples], caps2_n_dims * n_steps)\n",
@@ -3301,7 +3236,7 @@
         "                       mask_with_labels: True,\n",
         "                       y: tweak_labels})"
       ],
-      "execution_count": 104,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3351,11 +3286,11 @@
       "metadata": {
         "id": "6PeBJrd-Yq4N",
         "colab_type": "code",
+        "outputId": "cce2cef8-4ab1-4999-f6b8-a3274f4a3d26",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "cce2cef8-4ab1-4999-f6b8-a3274f4a3d26"
+        }
       },
       "source": [
         "for dim in range(11):\n",
@@ -3368,7 +3303,7 @@
         "            plt.axis(\"off\")\n",
         "    plt.show()"
       ],
-      "execution_count": 107,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3580,54 +3515,6 @@
           }
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "nHcDzqxAignA",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "QrwVcqExYq4Q",
-        "colab_type": "text"
-      },
-      "source": [
-        "# Conclusion"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Go-8znE6Yq4R",
-        "colab_type": "text"
-      },
-      "source": [
-        "I tried to make the code in this notebook as flat and linear as possible, to make it easier to follow, but of course in practice you would want to wrap the code in nice reusable functions and classes. For example, you could try implementing your own `PrimaryCapsuleLayer`, and `DenseRoutingCapsuleLayer` classes, with parameters for the number of capsules, the number of routing iterations, whether to use a dynamic loop or a static loop, and so on. For an example a modular implementation of Capsule Networks based on TensorFlow, take a look at the [CapsNet-TensorFlow](https://github.com/naturomics/CapsNet-Tensorflow) project.\n",
-        "\n",
-        "That's all for today, I hope you enjoyed this notebook!"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "KhR0nKUHYq4S",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
