CIFAR dataset Batch_s 10 E_epochs 5 acc 66.53

--- a/Caps_CIFAR.ipynb
+++ b/Caps_CIFAR.ipynb
@@ -41,28 +41,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "6hnVCrd9wXbg"
-      },
-      "source": [
-        "# Capsule Networks HW"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "MAAMz0LtcwGE",
-        "colab_type": "text"
-      },
-      "source": [
-        "This homework is strongly based on https://github.com/higgsfield/Capsule-Network-Tutorial/blob/master/Capsule%20Network.ipynb. \n",
-        "\n",
-        "In case you want to check CapsNet on MNIST feel free to do that (link above)."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "utLpDVlpcwGF",
         "colab_type": "text"
       },
@@ -71,71 +49,21 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "6QkLRp28woWk"
-      },
-      "source": [
-        "After you have uploaded this notebook to Google Collaboratory you may start running it (if you have fast GPU, you can run it locally). \n",
-        "\n",
-        "First of all you need to install pytorch. The code below does that for you.\n",
-        "\n",
-        "Every 24 hours Google Collaboratory reboots. Make sure you either run operations that require less than 24 hours of computation or you log your progress so that you can avoid starting from scratch every time.\n",
-        "\n",
-        "The notebooks are stored in your root Google Drive folder and you can save other files there as well (requires some googling)."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "n1XrJ3IcE4DV",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        },
-        "outputId": "e62e879c-282b-4304-faa2-081059f51a89"
-      },
-      "source": [
-        "# # http://pytorch.org/\n",
-        "# from os import path\n",
-        "# from wheel.pep425tags import get_abbr_impl, get_impl_ver, get_abi_tag\n",
-        "# platform = '{}{}-{}'.format(get_abbr_impl(), get_impl_ver(), get_abi_tag())\n",
-        "\n",
-        "# accelerator = 'cu80' if path.exists('/opt/bin/nvidia-smi') else 'cpu'\n",
-        "\n",
-        "# #!pip install -q http://download.pytorch.org/whl/{accelerator}/torch-0.3.0-{platform}-linux_x86_64.whl torchvision\n",
-        "# !pip3 uninstall torch torchvision\n"
-      ],
-      "execution_count": 44,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\u001b[33mWARNING: Skipping torch as it is not installed.\u001b[0m\n",
-            "\u001b[33mWARNING: Skipping torchvision as it is not installed.\u001b[0m\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "kSRoeZsBjihr",
         "colab_type": "code",
+        "outputId": "33c734e2-46bd-41e7-bbf5-bedb10ce42ba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "33c734e2-46bd-41e7-bbf5-bedb10ce42ba"
+        }
       },
       "source": [
         "import torch\n",
         "print(torch.__version__)"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -179,7 +107,7 @@
       "source": [
         "## CIFAR-10 data loader/generator.\n",
         "\n",
-        "Code below setups image generators from folder './data' (this folder is not saved and will be erased every 24 hours). \n",
+        "Code below setups image generators from folder './data'\n",
         "\n",
         "Normalization values for CIFAR10 are taken from pytorch website (usual normalization values for the task)."
       ]
@@ -218,16 +146,6 @@
         "## Network\n",
         "\n",
         "Recall the architecture of CapsNet. This tutorial walks you through building process of it. Note that actual values of parameters such as \"number of capsules\", \"number of filters in the first layer\" etc. are not taken from MNIST implementation in the original paper, but instead from CIFAR10 implementation."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "j0Z5bAZezXuY"
-      },
-      "source": [
-        "![alt text](https://cdn-images-1.medium.com/max/2000/1*uItEGzY1I9NK6hl1u4hPYg.png)"
       ]
     },
     {
@@ -655,7 +573,7 @@
         "    print ('Total test loss', test_loss / len(dataset.test_loader))\n",
         "    print ('Total test accuracy', test_accuracy / len(dataset.test_loader))"
       ],
-      "execution_count": 47,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -10412,7 +10330,7 @@
       "source": [
         "plot_images_separately(data[:6,0].data.cpu().numpy())"
       ],
-      "execution_count": 49,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -10442,7 +10360,7 @@
       "source": [
         "plot_images_separately(reconstructions[:6,0].data.cpu().numpy())"
       ],
-      "execution_count": 50,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -10459,26 +10377,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "B3IApzaZ8TAE",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
         "id": "pWTldL4t9QYt"
       },
       "source": [
-        "## Task"
+        "### To-Do"
       ]
     },
     {
@@ -10488,80 +10393,18 @@
         "id": "XBmwmhZP9UDs"
       },
       "source": [
-        "Your task is to **get at least 75% test accuracy on CIFAR10 (in the original paper ~90%) in no more than 10 epochs**. For this you may consider tuning various parameters.\n",
-        "\n",
-        "<br>\n",
-        "Start with some **obvious stuff**:\n",
-        "\n",
         "- Stack more convolutional layers before capsule layers.\n",
         "- Increase the size of the capsule layers (more capsules, larger capsules etc.). Note that it may take a lot of time.\n",
         "- Play with number of routing iterations in forward pass.\n",
         "- Play with kernel size of convolutions in the first layer (don't forget to change parameters of subsequent layers).\n",
         "- Play with kernel size of capsules in the second layer (again, pay attention to the parameters of subsequent computations).\n",
         "\n",
-        "Then, you may consider more **advansed ideas**.\n",
-        "\n",
         "- Try different variants of original implementation's loss function (change m+, m-, lambda, get rid of square etc.).\n",
         "- Try different loss functions (make it pure Hinge or pure MSE, maybe even cross-entropy!).\n",
         "- Try different implementation of capsules (not usual convolution operation, but maybe fully connected groups of neurons).\n",
         "- Try different non-linearities for capsules (changing ^2 to ^4 doesn't count!).\n",
         "- Try different weights for reconstruction loss.\n",
-        "\n",
-        "<br>\n",
-        "For each of the tested ideas **supply a mini-report (create a markdown cell above the implementation)**. This mini-report should cover what is the idea (ex: _\"I increased the number of routing iterations from 3 to 10.\"_), and if the idea is not obvious (like stacking more layers), please supply 1/2-sentence justification for it (ex: _\"I changed m+ to 0.7 because I think that we really do not need such high certainty in classification. I speculate that it will speed-up training, taking into account that pictures in CIFAR10 are much less alike than in MNIST we really do not need to be 90% sure, just 70% and it will lead to the same result.\"_).\n",
-        "\n",
-        "<br>\n",
-        "The final subtask is to **propose an idea in which capsules may be used in future and briefly explain motivation for it**. \n",
-        "\n",
-        "Ex: _\"The capsule representation of the object may be a great input for a GAN if coupled with usual GAN input (random noise vector). I think that capsules' generalized representations of objects may serve as an additional guide for a GAN so as to get expected results in image generation and not random ones. If we tune some coordinates in a capsule vector a little, we vary the reconstruction result (demonstrated in the paper), so, if we add up random noise vector and capsule representation (also tweaked to our desire) we can get various representations of the same object. For example we vary the coordinate 0 of the capsule and supply it to GAN we may get red apple, yellow apple, green apple etc. the random noise is needed to get different red apples, different yellow apples etc.\"_"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "SANDCkeQfXOA"
-      },
-      "source": [
-        "## Grading"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "nvvqaMcJfZqB"
-      },
-      "source": [
-        "The **deadline is March 16, 2018 20.00**\n",
-        "\n",
-        "75% test accuracy in 10 epochs gives you 7 points.\n",
-        "\n",
-        "Playing with at least 2 parameters in the advanced section gives you another 2 points in case you supplied mini-report with justification for it.\n",
-        "\n",
-        "Proposing not-so-obvious research idea will give you another 1 point."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "HiXkxhDNueVt"
-      },
-      "source": [
-        "## Contacts"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "4Os4SO3Cukpe"
-      },
-      "source": [
-        "Should you have any questions regarding the assignment contact Nikita Seleznev: http://telegram.me/stleznev\n",
-        "\n",
-        "However, please, avoid an avalanche of messages during the last hours before the deadline :)"
+        "\n"
       ]
     },
     {
