Traffic Sign Classifier|| acc 94.81 || loss 0.078 || epochs 10000

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -22,6 +22,7 @@
     "colab": {
       "name": "Traffic_Sign_Classifier.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "accelerator": "GPU"
@@ -34,7 +35,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/QuickLearner171998/capsnet-traffic-sign-classifier/blob/master/Traffic_Sign_Classifier.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/QuickLearner171998/CapsNet/blob/master/Traffic_Sign_Classifier.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -42,64 +43,32 @@
       "metadata": {
         "id": "6mtNHRnd2VRv",
         "colab_type": "code",
-        "outputId": "03910899-8eb0-4ab8-f784-e9e9ad128298",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 125
-        }
+        "colab": {}
       },
       "source": [
         "from google.colab import drive\n",
         "\n",
         "drive.mount('/content/drive',force_remount=True)"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "1EmvC3yJ2fMl",
         "colab_type": "code",
-        "outputId": "d7026930-05be-4953-957c-8d2cdcdd854d",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 105
-        }
+        "colab": {}
       },
       "source": [
-        "%cd drive\n",
-        "%cd 'My Drive'\n",
-        "%cd 'MY Projects'\n",
-        "%cd 'EEE lop'\n",
-        "%cd capsnet-traffic-sign-classifier"
+        "# %cd drive\n",
+        "# %cd 'My Drive'\n",
+        "# %cd 'MY Projects'\n",
+        "# %cd 'EEE lop'\n",
+        "# %cd capsnet-traffic-sign-classifier"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/content/drive\n",
-            "/content/drive/My Drive\n",
-            "/content/drive/My Drive/MY Projects\n",
-            "/content/drive/My Drive/MY Projects/EEE lop\n",
-            "/content/drive/My Drive/MY Projects/EEE lop/capsnet-traffic-sign-classifier\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -146,17 +115,16 @@
       "metadata": {
         "id": "ZGJCmv3FzEMQ",
         "colab_type": "code",
+        "outputId": "3d71a66b-5bd5-458a-ff71-5c4b1bc8c1f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "3d71a66b-5bd5-458a-ff71-5c4b1bc8c1f7"
+        }
       },
       "source": [
         "# Load pickled data\n",
         "import pickle\n",
         "\n",
-        "# TODO: Fill this in based on where you saved the training and testing data\n",
         "\n",
         "training_file = \"dataset/train.p\"\n",
         "validation_file= \"dataset/valid.p\"\n",
@@ -177,7 +145,7 @@
         "print(X_train.shape)\n",
         "print(y_train.shape)\n"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,11 +193,11 @@
       "metadata": {
         "id": "n_YGjUPSzEMX",
         "colab_type": "code",
+        "outputId": "4038f50b-abf8-492d-9403-6b56545d9771",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
-        },
-        "outputId": "4038f50b-abf8-492d-9403-6b56545d9771"
+        }
       },
       "source": [
         "### Replace each question mark with the appropriate value. \n",
@@ -255,7 +223,7 @@
         "print(\"Image data shape =\", image_shape)\n",
         "print(\"Number of classes =\", n_classes)"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -298,11 +266,11 @@
       "metadata": {
         "id": "ohzfASWJzEMc",
         "colab_type": "code",
+        "outputId": "b4751fc1-932d-458f-deb5-53ed449428c8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "b4751fc1-932d-458f-deb5-53ed449428c8"
+        }
       },
       "source": [
         "### Data exploration visualization code goes here.\n",
@@ -354,7 +322,7 @@
         "\n",
         "    \n"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -456,11 +424,11 @@
       "metadata": {
         "id": "4Sb0y5BYzEMi",
         "colab_type": "code",
+        "outputId": "3f836d52-6cc7-4ba0-ec1c-73d9b10a9e63",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 81
-        },
-        "outputId": "3f836d52-6cc7-4ba0-ec1c-73d9b10a9e63"
+        }
       },
       "source": [
         "### Preprocess the data here. It is required to normalize the data. Other preprocessing steps could include \n",
@@ -476,7 +444,7 @@
         "X_test = X_test / 255\n",
         "\n"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -556,11 +524,11 @@
       "metadata": {
         "id": "v2VWkpEdzEMo",
         "colab_type": "code",
+        "outputId": "3c601a22-e700-49d0-d7cb-85a7816b357c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 267
-        },
-        "outputId": "3c601a22-e700-49d0-d7cb-85a7816b357c"
+        }
       },
       "source": [
         "fig = plt.figure()\n",
@@ -579,7 +547,7 @@
         "    \n",
         "plt.show()\n"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1132,18 +1100,18 @@
       "metadata": {
         "id": "DPC1n71VzEM0",
         "colab_type": "code",
+        "outputId": "5bb56869-fb72-47bb-f52b-289505db0b04",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "5bb56869-fb72-47bb-f52b-289505db0b04"
+        }
       },
       "source": [
         "# Init model\n",
         "model = ModelTrafficSign(\"TrafficSign\", output_folder=\"outputs\")\n",
         "model.init()"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1399,11 +1367,11 @@
         "scrolled": true,
         "id": "swJ7b_kxzEM3",
         "colab_type": "code",
+        "outputId": "7b9c2fe2-64a2-4235-fab1-4ea790f0a8f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "7b9c2fe2-64a2-4235-fab1-4ea790f0a8f9"
+        }
       },
       "source": [
         "### Train your model here.\n",
@@ -1458,7 +1426,7 @@
         "\n",
         "  "
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3773,11 +3741,11 @@
       "metadata": {
         "id": "nHz7CgcBzEM6",
         "colab_type": "code",
+        "outputId": "094f0879-fa48-4707-c35d-2416f2caa180",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "094f0879-fa48-4707-c35d-2416f2caa180"
+        }
       },
       "source": [
         "# Test the model on the test set\n",
@@ -3788,7 +3756,7 @@
         "print(\"Test Accuracy = \", acc)\n",
         "print(\"Test Loss = \", loss)"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3831,11 +3799,11 @@
       "metadata": {
         "id": "q6EtQz8GzENC",
         "colab_type": "code",
+        "outputId": "6fbe0982-beb2-4281-945e-5516d9a9f69e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "6fbe0982-beb2-4281-945e-5516d9a9f69e"
+        }
       },
       "source": [
         "### Load the images and plot them here.\n",
@@ -3854,7 +3822,7 @@
         "    \n",
         "\n"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3961,11 +3929,11 @@
       "metadata": {
         "id": "4ywqq9hBzENJ",
         "colab_type": "code",
+        "outputId": "bc5032c3-f9c3-40a9-85b8-9165a19c0367",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "bc5032c3-f9c3-40a9-85b8-9165a19c0367"
+        }
       },
       "source": [
         "### Calculate the accuracy for these 5 new images. \n",
@@ -3987,7 +3955,7 @@
         "plt.show()\n",
         "\n"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4074,42 +4042,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "aXUypnxTJY4F",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "vDHKl7OEzENb",
-        "colab_type": "text"
-      },
-      "source": [
-        "### Project Writeup\n",
-        "\n",
-        "Once you have completed the code implementation, document your results in a project writeup using this [template](https://github.com/udacity/CarND-Traffic-Sign-Classifier-Project/blob/master/writeup_template.md) as a guide. The writeup can be in a markdown or pdf file. "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "XgsPHE9XzENc",
-        "colab_type": "text"
-      },
-      "source": [
-        "> **Note**: Once you have completed all of the code implementations and successfully answered each question above, you may finalize your work by exporting the iPython Notebook as an HTML document. You can do this by using the menu above and navigating to  \\n\",\n",
-        "    \"**File -> Download as -> HTML (.html)**. Include the finished document along with this notebook as your submission."
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "D74_h-zwzENc",
@@ -4118,7 +4050,7 @@
       "source": [
         "---\n",
         "\n",
-        "## Step 4 (Optional): Visualize the Neural Network's State with Test Images\n",
+        "## Visualize the Neural Network's State with Test Images\n",
         "\n",
         " This Section is not required to complete but acts as an additional excersise for understaning the output of a neural network's weights. While neural networks can be a great learning device they are often referred to as a black box. We can understand what the weights of a neural network look like better by plotting their feature maps. After successfully training your neural network you can see what it's feature maps look like by plotting the output of the network's weight layers in response to a test stimuli image. From these plotted feature maps, it's possible to see what characteristics of an image the network finds interesting. For a sign, maybe the inner network feature maps react with high activation to the sign's boundary outline or to the contrast in the sign's painted symbol.\n",
         "\n",
