--- a/CapsNets_Kannada_MNIST.ipynb
+++ b/CapsNets_Kannada_MNIST.ipynb
@@ -22,7 +22,6 @@
       "name": "CapsNets_Kannada_MNIST.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "gGK25aIYYq3w",
         "MNdWyen-Yq3y"
       ],
       "include_colab_link": true
@@ -88,14 +87,30 @@
       "metadata": {
         "id": "JZD4FBtkZkcF",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 122
+        },
+        "outputId": "38da193a-80d0-4414-f0f8-81ddd1ffd5d8"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -112,28 +127,38 @@
       "metadata": {
         "id": "-9zyoGn0ZysU",
         "colab_type": "code",
-        "outputId": "8bbb899d-ca10-4dfc-b533-2cc9e62a68cb",
+        "outputId": "66d27751-4d8c-4713-bb67-24510b45477d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 221
         }
       },
       "source": [
-        "# !ls\n",
-        "# %cd drive\n",
-        "# %cd 'My Drive'\n",
-        "# %cd 'MY Projects'\n",
-        "# %cd 'EEE lop'\n",
-        "# %cd \"CapsNet for kannada_mnist\"\n",
-        "# !ls"
+        "!ls\n",
+        "%cd drive\n",
+        "%cd 'My Drive'\n",
+        "%cd 'MY Projects'\n",
+        "%cd 'EEE lop'\n",
+        "%cd \"CapsNet for kannada_mnist\"\n",
+        "!ls"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "drive  sample_data\n",
-            "/content/drive\n"
+            "/content/drive\n",
+            "/content/drive/My Drive\n",
+            "/content/drive/My Drive/MY Projects\n",
+            "/content/drive/My Drive/MY Projects/EEE lop\n",
+            "/content/drive/My Drive/MY Projects/EEE lop/CapsNet for kannada_mnist\n",
+            " CapsNets_Kannada_MNIST.ipynb   kaggle.json\n",
+            "'checkpoint (1)'\t        Kannada_MNIST_datataset_paper\n",
+            " ckpts\t\t\t        logs\n",
+            " dig_ckpt.data-00000-of-00001   my_capsule_network.data-00000-of-00001\n",
+            " dig_ckpt.index\t\t        my_capsule_network.index\n",
+            " dig_ckpt.meta\t\t        my_capsule_network.meta\n"
           ],
           "name": "stdout"
         }
@@ -144,7 +169,11 @@
       "metadata": {
         "id": "8MHusw-M8c-H",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 63
+        },
+        "outputId": "f634570c-f099-4bde-cb61-76a18c5f2856"
       },
       "source": [
         "import numpy as np, pandas as pd\n",
@@ -152,6 +181,55 @@
         "import matplotlib\n",
         "import matplotlib.pyplot as plt\n",
         "import tensorflow as tf\n"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<p style=\"color: red;\">\n",
+              "The default version of TensorFlow in Colab will soon switch to TensorFlow 2.x.<br>\n",
+              "We recommend you <a href=\"https://www.tensorflow.org/guide/migrate\" target=\"_blank\">upgrade</a> now \n",
+              "or ensure your notebook will continue to use TensorFlow 1.x via the <code>%tensorflow_version 1.x</code> magic:\n",
+              "<a href=\"https://colab.research.google.com/notebooks/tensorflow_version.ipynb\" target=\"_blank\">more info</a>.</p>\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_9h0gZ5ttBM7",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Train and val\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FM45s7o0tAi6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "x_train = np.load('Kannada_MNIST_datataset_paper/Kannada_MNIST_npz/Kannada_MNIST/X_kannada_MNIST_train.npz')['arr_0']\n",
+        "Y_train = np.load('Kannada_MNIST_datataset_paper/Kannada_MNIST_npz/Kannada_MNIST/y_kannada_MNIST_train.npz')['arr_0']\n",
+        "\n",
+        "X_val = x_train[55000:]\n",
+        "X_train = x_train[:55000]\n",
+        "y_val = Y_train[55000:]\n",
+        "y_train = Y_train[:55000]"
       ],
       "execution_count": 0,
       "outputs": []
@@ -175,15 +253,8 @@
       },
       "source": [
         "\n",
-        "# x_train = np.load('Kannada_MNIST_datataset_paper/Kannada_MNIST_npz/Kannada_MNIST/X_kannada_MNIST_train.npz')['arr_0']\n",
-        "# X_test = np.load('Kannada_MNIST_datataset_paper/Kannada_MNIST_npz/Kannada_MNIST/X_kannada_MNIST_test.npz')['arr_0']\n",
-        "# Y_train = np.load('Kannada_MNIST_datataset_paper/Kannada_MNIST_npz/Kannada_MNIST/y_kannada_MNIST_train.npz')['arr_0']\n",
-        "# y_test = np.load('Kannada_MNIST_datataset_paper/Kannada_MNIST_npz/Kannada_MNIST/y_kannada_MNIST_test.npz')['arr_0']\n",
-        "\n",
-        "# X_val = x_train[55000:]\n",
-        "# X_train = x_train[:55000]\n",
-        "# y_val = Y_train[55000:]\n",
-        "# y_train = Y_train[:55000]"
+        "X_test = np.load('Kannada_MNIST_datataset_paper/Kannada_MNIST_npz/Kannada_MNIST/X_kannada_MNIST_test.npz')['arr_0']\n",
+        "y_test = np.load('Kannada_MNIST_datataset_paper/Kannada_MNIST_npz/Kannada_MNIST/y_kannada_MNIST_test.npz')['arr_0']\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -208,15 +279,8 @@
         "colab": {}
       },
       "source": [
-        "X = np.load('Kannada_MNIST_datataset_paper/Kannada_MNIST_npz/Dig_MNIST/X_dig_MNIST.npz')['arr_0']\n",
-        "Y = np.load('Kannada_MNIST_datataset_paper/Kannada_MNIST_npz/Dig_MNIST/y_dig_MNIST.npz')['arr_0']\n",
-        "X_train = X[:8192]\n",
-        "X_val = X[8192:9216]\n",
-        "X_test = X[9216:]\n",
-        "\n",
-        "y_train = Y[:8192]\n",
-        "y_val = Y[8192:9216]\n",
-        "y_test = Y[9216:]\n",
+        "X_test = np.load('Kannada_MNIST_datataset_paper/Kannada_MNIST_npz/Dig_MNIST/X_dig_MNIST.npz')['arr_0']\n",
+        "y_test = np.load('Kannada_MNIST_datataset_paper/Kannada_MNIST_npz/Dig_MNIST/y_dig_MNIST.npz')['arr_0']\n",
         "\n"
       ],
       "execution_count": 0,
@@ -227,7 +291,7 @@
       "metadata": {
         "id": "aIc0Ha2B9Tcy",
         "colab_type": "code",
-        "outputId": "77fb82a1-dfbb-4410-84f9-89f1d144b025",
+        "outputId": "071379ff-4679-4949-f698-fd7bc76910d3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -236,19 +300,19 @@
       "source": [
         "X_test.shape"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(1024, 28, 28)"
+              "(10240, 28, 28)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 6
         }
       ]
     },
